Change to grid layout everywhere, set correct github colors, center header bar on small screens

--- a/frontend/src/app/about/about.component.scss
+++ b/frontend/src/app/about/about.component.scss
@@ -18,7 +18,7 @@
 }
 
 /* Simple breakpoint - desktop and up */
-@media (min-width: variables.$medium-breakpoint) {
+@media (min-width: variables.$Small-breakpoint) {
   .content-wrapper {
     grid-template-columns: 2fr 1fr;
   }
