--- a/frontend/src/styles/_variables.scss
+++ b/frontend/src/styles/_variables.scss
@@ -1,1 +1,2 @@
-$medium-breakpoint: 768px;
+$Small-breakpoint: 960px;
+$max-width: 960px;
